--- a/TravelPlannerApp/TravelPlannerApp/TravelPlannerApp.csproj
+++ b/TravelPlannerApp/TravelPlannerApp/TravelPlannerApp.csproj
@@ -67,13 +67,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -86,6 +81,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="C:\Users\tgdd\Desktop\Git\ImageButton-master\ImageButton\ImageButton.csproj">
+      <Project>{0973edbb-a459-4265-a114-5f748a26123f}</Project>
+      <Name>ImageButton</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\A.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cute-dog-shiba-inu-ryuji-japan-28-1492164409903-1492167441253-127-0-487-700-crop-1492167445920.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
