--- a/TravelPlannerApp/TravelPlannerApp/TravelPlannerApp.csproj
+++ b/TravelPlannerApp/TravelPlannerApp/TravelPlannerApp.csproj
@@ -51,6 +51,11 @@
     <Compile Include="info.Designer.cs">
       <DependentUpon>info.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Travel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +73,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -82,17 +88,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="C:\Users\tgdd\Desktop\Git\ImageButton-master\ImageButton\ImageButton.csproj">
-      <Project>{0973edbb-a459-4265-a114-5f748a26123f}</Project>
-      <Name>ImageButton</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\A.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\cute-dog-shiba-inu-ryuji-japan-28-1492164409903-1492167441253-127-0-487-700-crop-1492167445920.jpg" />
+    <None Include="Resources\A1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
